--- a/frontend/evento_app/src/App.css
+++ b/frontend/evento_app/src/App.css
@@ -1,8 +1,4 @@
-.App {
-    margin-left: 20px;
-  }
-  
-  input {
-    display: block;
-    margin: 5px 0 5px;
-  }
+a {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; 
+}
